[tool.poetry]
name = "reddit-img-parser"
version = "0.2.0"
description = ""
authors = ["skip"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
progress = "^1.6"
fake-useragent = "^1.1.1"
console-menu = "^0.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
wemake-python-styleguide = "^0.17.0"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
reddit-img-parser = "reddit_img_parser.scripts.reddit_img_parser:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
